<resources>
    <string name="app_name">DAWI</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="btnLogin_Text">Login</string>
    <string name="btnSignUp_Text">Sign Up</string>
    <string name="enter_your_username">Enter Your Username</string>
    <string name="enter_your_age">Enter Your Age</string>
    <string name="tvRegistration_Text">Registration</string>
    <string name="btnMain">Go Back</string>
    <string name="hello">hello</string>
    <string name="age">Age</string>
    <string name="btn_save">Save</string>
    <string name="btn_goback">Go Back</string>
</resources>
